fix: Modal in large mode now correct layout, but alignment still a bit off

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,11 @@ nav {
   transition: transform 0.3s ease-in-out;
 }
 
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
 .modal-container::-webkit-scrollbar {
   display: none;
 }
